unpackaged/main/default/objects/Partner_Update__c/Partner_Update__c.object-meta.xml
<CustomObject>
    <label>Partner Update</label>
    <nameField>
        <displayFormat>PU-{0000}</displayFormat>
        <label>Partner Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>