unpackaged/main/default/objects/Partner_Update__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Partner Updates</relationshipLabel>
    <relationshipName>Partner_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>