unpackaged/main/default/objects/Partner_Update__c/fields/Marketing_Category__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Category__c</fullName>
    <label>Marketing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evangelist</fullName>
            </value>
            <value>
                <fullName>Not Evangelist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>