unpackaged/main/default/objects/Partner_Update__c/fields/Marketing_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Score__c</fullName>
    <label>Marketing Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>