unpackaged/main/default/objects/Partner_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>API_External_ID__c</columns>
    <columns>Intake__c</columns>
    <columns>Matter__c</columns>
    <columns>Marketing_Category__c</columns>
    <columns>Marketing_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>